--- a/frontend_react/src/components/Navbar/Navbar.scss
+++ b/frontend_react/src/components/Navbar/Navbar.scss
@@ -21,11 +21,57 @@
 
   img {
     width: 90px;
-    height: 20px:auto
+    height: 20px;
 
     @media screen and (min-width: 2000px) {
       width: 180px;
       height: 40px;
+    }
+  }
+}
+
+.app__navbar-links {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  list-style: none;
+
+  li {
+    margin: 0 1rem; 
+    cursor: pointer;
+
+    flex-direction: column;
+
+    div {
+      width: 5px;
+      height: 5px;
+      background: transparent;
+      border-radius: 50%;
+
+      margin-bottom: 5px;
+    }
+
+    a {
+      color: var(--gray-color);
+      text-decoration: none;
+      flex-direction: column;
+
+      text-transform: uppercase;
+      font-weight: 500;
+
+      transition: all -.3s ease-in-out;
+
+      &:hover {
+        color: var(--secondary-color)
+      }
+    }
+
+    &:hover {
+      div {
+        background: var(--secondary-color)
+      }
     }
   }
 }
