--- a/frontend_react/src/index.css
+++ b/frontend_react/src/index.css
@@ -2,7 +2,7 @@
 
 :root {
   font-family: 'DM Sans', sans-serif;
-  /* --font-base: 'DM Sans', sans-serif; */
+  --font-base: 'DM Sans', sans-serif;
   --primary-color: #edf2f8;
   --secondary-color: #313bac;
   --black-color: #030303;
