--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -2,8 +2,10 @@
   position: relative;
   background: url('../../assets/bgIMG.png');
   background-size: cover;
-  background-repeat: repeat;
+
   background-position: center;
+  background-repeat: repeat;
+
 
   .app__wrapper {
     padding: 0;
@@ -45,7 +47,7 @@
 
   @media screen and (max-width: 1200px) {
     width: 100%;
-    margin-right: 0rem; 
+    margin-right: 0rem;
   }
 }
 
@@ -56,7 +58,7 @@
   align-items: flex-end;
   flex-direction: column;
 
-  .badge-cmp, 
+  .badge-cmp,
   .tag-cmp {
     padding: 1rem 2rem;
     background: var(--white-color);
@@ -64,7 +66,7 @@
     flex-direction: row;
     width: auto;
 
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
   }
 
   .tag-cmp {
@@ -83,9 +85,6 @@
 
     @media screen and (min-width: 2000px) {
       font-size: 5rem;
-
-    @media screen and  (min-width: 2000px) {
-      font-size: 5rem;
     }
   }
 
@@ -93,15 +92,16 @@
     justify-content: flex-start;
     align-items: flex-start;
   }
+}
 
-  .app__header-circles {
-    flex: 0.75;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    height: 100%;
-    margin-left: 1rem;
+.app__header-circles {
+  flex: 0.75;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  height: 100%;
+  margin-left: 1rem;
 
   div {
     width: 100px;
@@ -111,7 +111,7 @@
     background: var(--white-color);
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
 
-    img {
+    img { 
       width: 60%;
       height: 60%;
     }
@@ -155,7 +155,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     margin-left: 0;
-    
+  
     div {
       margin: 1rem;
     }
@@ -187,7 +187,7 @@
     height: 90%;
   }
 
-  @media screen and  (max-width: 1200px) {
+  @media screen and (max-width: 1200px) {
     margin: 2rem 0;
   }
 }
