--- a/frontend_react/src/container/Work/Work.scss
+++ b/frontend_react/src/container/Work/Work.scss
@@ -61,6 +61,17 @@
     &:hover {
       box-shadow: 0 0 25px rgba(0,0,0,0.2);
     }
+
+    @media screen and (min-width: 2000px) {
+      width: 460px;
+      padding: 1.25rem;
+      border-radius: 0.75;
+    }
+
+    @media screen and (max-width: 300px) {
+      width: 100%;
+      margin: 1rem;
+    }
   }
 }
 
